--- a/src/app/post-it-notes/board/note/note.component.css
+++ b/src/app/post-it-notes/board/note/note.component.css
@@ -1,5 +1,6 @@
 .note {
-  position: relative;
+  position: absolute;
+  background-color: white;
   border-style: solid;
   border-width: 1px;
   display: flex;
