--- a/src/app/post-it-notes/board/note/note.component.html
+++ b/src/app/post-it-notes/board/note/note.component.html
@@ -3,6 +3,7 @@
   draggable="true"
   (dragstart)="dragstart_handler($event);"
   [style.left]="_note.left + 'px'" [style.top]="_note.top + 'px'">
+  <button (click)="del()">Delete</button>
   <span>Title: <input type="text" formControlName="title"></span>
   <span>Color: <input type="text" formControlName="color"></span>
   <div>Content: <textarea formControlName="content"></textarea></div>
