--- a/src/app/post-it-notes/post-it-notes.component.html
+++ b/src/app/post-it-notes/post-it-notes.component.html
@@ -1,4 +1,4 @@
 <div class="post-it-notes">
-  <app-board [notes]="notes"></app-board>
-  <app-list [notes]="notes"></app-list>
+  <app-board></app-board>
+  <app-list></app-list>
 </div>
