Added z-index support.

--- a/src/app/post-it-notes/board/note/note.component.html
+++ b/src/app/post-it-notes/board/note/note.component.html
@@ -1,8 +1,10 @@
 <form
   class="note" [formGroup]="noteForm"
   draggable="true"
+  (click)="toTop()"
+  (mousedown)="toTop()"
   (dragstart)="dragstart_handler($event);"
-  [style.left]="_note.left + 'px'" [style.top]="_note.top + 'px'">
+  [style.left]="_note.left + 'px'" [style.top]="_note.top + 'px'" [style.z-index]="_note.zindex">
   <button (click)="del()">Delete</button>
   <span>Title: <input type="text" formControlName="title"></span>
   <span>Color: <input type="text" formControlName="color"></span>
