Fixed misuse of trackBy since it should be a function.

--- a/src/app/post-it-notes/board/board.component.html
+++ b/src/app/post-it-notes/board/board.component.html
@@ -4,5 +4,5 @@
   (drop)="drop($event);"
   (dblclick)="newNote($event);"
 >
-  <app-note *ngFor="let note of notes; trackBy: note.id" [note]="note"></app-note>
+  <app-note *ngFor="let note of notes; trackBy: noteTrackBy" [note]="note"></app-note>
 </div>
