Fixed new note trigger by double click event on note problem.

--- a/src/app/post-it-notes/board/board.component.html
+++ b/src/app/post-it-notes/board/board.component.html
@@ -2,7 +2,7 @@
   (dragover)="dropping($event);"
   (dragenter)="dropping($event);"
   (drop)="drop($event);"
-  (dblclick)="newNote($event);"
+  (dblclick)="newNoteIfSelf($event);"
 >
   <app-note *ngFor="let note of notes; trackBy: noteTrackBy" [note]="note"></app-note>
 </div>
