Switch dragging from drag-drop-api to mouse events for moving when dropiing and to use more observable pattern.

--- a/src/app/post-it-notes/board/board.component.html
+++ b/src/app/post-it-notes/board/board.component.html
@@ -1,7 +1,4 @@
-<div id="board"
-  (dragover)="dropping($event);"
-  (dragenter)="dropping($event);"
-  (drop)="drop($event);"
+<div #board id="board"
   (dblclick)="newNoteIfSelf($event);"
 >
   <app-note *ngFor="let note of notes; trackBy: noteTrackBy" [note]="note"></app-note>
