--- a/src/app/post-it-notes/board/note/note.component.html
+++ b/src/app/post-it-notes/board/note/note.component.html
@@ -5,6 +5,6 @@
   (mousedown)="toTop()"
   [style.left]="_note.left + 'px'" [style.top]="_note.top + 'px'" [style.z-index]="_note.zindex">
   <span>Title: <input type="text" formControlName="title"></span>
-  <span>Color: <input type="color" formControlName="color"></span>
+  <span>Color: <img (click)="palette.click()" src="assets/palette.png"><input #palette type="color" formControlName="color"></span>
   <div>Content: <textarea formControlName="content"></textarea></div>
 </form>
