add edit mode/add color change feature for note header

--- a/src/app/post-it-notes/board/note/note.component.css
+++ b/src/app/post-it-notes/board/note/note.component.css
@@ -10,3 +10,12 @@ img {
   flex-direction: column;
   width: 300px;
 }
+
+.header {
+  height: 20px;
+  width: 100%;
+}
+
+.content {
+  max-height: 100px;
+}
