Added selected highlight.

--- a/src/app/post-it-notes/board/note/note.component.html
+++ b/src/app/post-it-notes/board/note/note.component.html
@@ -1,6 +1,7 @@
 <form
   #noteFormDom
   class="note" [formGroup]="noteForm"
+  [class.selected]="_note.selected"
   (click)="toTop()"
   (mousedown)="toTop()"
   [style.left]="_note.left + 'px'" [style.top]="_note.top + 'px'" [style.z-index]="_note.zindex">
