select input element by ViewChild

--- a/src/app/post-it-notes/board/note/note.component.html
+++ b/src/app/post-it-notes/board/note/note.component.html
@@ -7,13 +7,15 @@
   [style.left]="_note.left + 'px'" [style.top]="_note.top + 'px'" [style.z-index]="_note.zindex">
   <span class='header' [style.background]='_note.color'></span>
   <span>
-    Title: <input *ngIf='isEditing' (keydown)="onKeydown($event)" [id]="_note.id + '_title'"  type="text" formControlName="title" placeholder="Please input title.">
+    Title: <input #titleInput *ngIf='isEditing' type="text" formControlName="title" placeholder="請輸入標題">
             <span *ngIf='!isEditing'>{{ _note.title || '無標題' }}</span>
   </span>
   <span>Color: <img (click)="palette.click()" src="assets/palette.png"><input [attr.disabled]="!isEditing ? '' : null" #palette type="color" formControlName="color"></span>
-  <div>
-    Content: 
-      <textarea class='content' *ngIf='isEditing' (keydown)="onKeydown($event)" formControlName="content"  oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"'></textarea>
-      <span *ngIf='!isEditing'>{{_note.content}}</span>
+  <div class="contant-wrapper">
+    <span style="padding-right: 5px">Content:</span>
+    <div>
+      <textarea #contentInput class='content' *ngIf='isEditing' (keydown)="onKeydown($event)" [style.height]="_note.textHeight + 'px'" formControlName="content" oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"'></textarea>
+      <div *ngIf='!isEditing' class='content text' [style.height]="_note.textHeight + 'px'" >{{_note.content}}</div>
+    </div>
   </div>
 </form>
