--- a/src/app/post-it-notes/board/note/note.component.css
+++ b/src/app/post-it-notes/board/note/note.component.css
@@ -16,6 +16,19 @@ img {
   width: 100%;
 }
 
+.contant-wrapper {
+  display: flex;
+  width: 200px;
+}
+
 .content {
   max-height: 100px;
+  width: 200px;
+}
+
+.text {
+  word-break: break-all;
+  width: 200px;
+  white-space: pre-line;
+  overflow-y: auto;
 }
