Let palette display more simply.

--- a/src/app/post-it-notes/board/note/note.component.html
+++ b/src/app/post-it-notes/board/note/note.component.html
@@ -6,12 +6,12 @@
   (mousedown)="toTop()"
   (dblclick)="startEdit();"
   [style.left]="_note.left + 'px'" [style.top]="_note.top + 'px'" [style.z-index]="_note.zindex">
-  <span class='header' [style.background]='_note.color'></span>
+  <span class='header' [style.background]='color'></span>
   <span>
     Title: <input #titleInput *ngIf='isEditing' type="text" formControlName="title" placeholder="請輸入標題">
             <span *ngIf='!isEditing'>{{ _note.title || '無標題' }}</span>
+      <span *ngIf="isEditing"><img (click)="palette.click()" src="assets/palette.png"><input class="hidden" [attr.disabled]="!isEditing ? '' : null" #palette type="color" formControlName="color"></span>
   </span>
-  <span>Color: <img (click)="palette.click()" src="assets/palette.png"><input [attr.disabled]="!isEditing ? '' : null" #palette type="color" formControlName="color"></span>
   <div class="contant-wrapper">
     <span style="padding-right: 5px">Content:</span>
     <div>
