--- a/src/app/post-it-notes/board/note/note.component.css
+++ b/src/app/post-it-notes/board/note/note.component.css
@@ -8,7 +8,8 @@ img {
   border-width: 1px;
   display: flex;
   flex-direction: column;
-  width: 300px;
+  min-width: 300px;
+  max-width: 600px;
 }
 
 .header {
@@ -16,19 +17,30 @@ img {
   width: 100%;
 }
 
-.contant-wrapper {
-  display: flex;
-  width: 200px;
+.content-wrapper {
+  position: relative;
+  width: 100%;
 }
 
 .content {
-  max-height: 100px;
-  width: 200px;
+  width: 100%;
+  font-family: "Times New Roman";
+  font-size: 16px;
+  min-height: 1em;
+  max-height: 10em;
+}
+
+textarea {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  resize: none;
+  padding: 0px;
+  border-width: 0px;
 }
 
 .text {
   word-break: break-all;
-  width: 200px;
   white-space: pre-line;
   overflow-y: auto;
 }
