--- a/src/app/post-it-notes/list/note-simple/note-simple.component.html
+++ b/src/app/post-it-notes/list/note-simple/note-simple.component.html
@@ -1,4 +1,4 @@
-<div class="container" [class.selected]="note.selected" (click)="toTop()">
+<div class="container" [class.selected]="_note.selected" (click)="toTop()">
   <div>
     <div><span class="color" [style.color]="note.color">&#9646;</span>{{title || '無標題'}}</div>
   </div>
