--- a/src/app/post-it-notes/board/board.component.html
+++ b/src/app/post-it-notes/board/board.component.html
@@ -1,5 +1,5 @@
 <div #board id="board"
   (dblclick)="newNoteIfSelf($event);"
 >
-  <app-note *ngFor="let note of notes; trackBy: noteTrackBy" [note]="note"></app-note>
+  <app-note *ngFor="let note of notes; trackBy: noteTrackBy" [note]="note.changeEvent$ | async"></app-note>
 </div>
