--- a/src/app/post-it-notes/list/list.component.html
+++ b/src/app/post-it-notes/list/list.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let note of notes; trackBy: noteTrackBy">
-  <app-note-simple [note]="note"></app-note-simple>
+  <app-note-simple [note]="note.changeEvent$ | async"></app-note-simple>
 </div>
